Fixed header title vertical alignment.

--- a/src/components/HeaderComponent/HeaderComponent.scss
+++ b/src/components/HeaderComponent/HeaderComponent.scss
@@ -19,6 +19,8 @@
   }
 
   &__title {
+    display: flex;
+    align-items: center;
 
     h1,
     h2 {
